--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PureHTML Customer Orders</title>
+    <title>Pages</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" 
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
@@ -12,7 +12,7 @@
     <div class="container">
         <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #684551;">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#">Puff's Bakery</a>
+              <a class="navbar-brand" href="#">Pages Bookstore</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="true" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -30,10 +30,10 @@
         </nav>
         <div class="row">
             <div class="card col-sm-6 m-5 text-white" style="width: 35rem; background-color: #684551;">
-                <img src="images/bakery.jpeg" class="card-img-top" alt="..." style="height: 25rem;">
+                <img src="bookstore.jpeg" class="card-img-top" alt="bookstore" style="height: 25rem;">
                 <div class="card-body">
-                  <p class="card-text">Check out our brand new bakery location! Select your custom favorite desserts & their flovors 
-                      and we'll figure out a way to make them work and get them ready for you!</p>
+                  <p class="card-text">Check out our brand new bookstore location! Select your favorite authors & genre 
+                      and we'll figure out a way to get them ready for you!</p>
                 </div>
             </div>
             <form class="p-5 col-sm-6" style="margin-top: 2rem;">
@@ -47,15 +47,15 @@
                   <div id="emailHelp" class="form-text text-white">We'll never share your email with anyone else.</div>
                 </div>
                 <div class="mb-3">
-                  <label for="Desserts" class="form-label">Desserts</label>
-                  <input type="text" class="form-control" id="Desserts">
+                  <label for="Books" class="form-label">Books</label>
+                  <input type="text" class="form-control" id="Books">
                 </div>
-                <label for="flavors" class="form-label">Choose your flavors</label>
+                <label for="genre" class="form-label">Choose your genre</label>
                 <div class="input-group mb-3">
-                    <input type="text" class="form-control" placeholder="Enter flavors" aria-label="Enter Flavors" aria-describedby="basic-addon2">
-                    <span class="input-group-text" id="basic-addon2">flavors</span>
+                    <input type="text" class="form-control" placeholder="Enter genre" aria-label="Enter genre" aria-describedby="basic-addon2">
+                    <span class="input-group-text" id="basic-addon2">genre</span>
                 </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
+                <button type="submit" class="btn btn-dark">Submit</button>
             </form>
         </div>
     </div>
