--- a/app/index.html
+++ b/app/index.html
@@ -19,11 +19,11 @@
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                    <a class="nav-link active" aria-current="page" href="/">Home</a>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="orders.html">View Orders</a>
-                  </li>
+                  <form class="d-flex" action="/view" method="GET">
+                    <button class="btn btn-outline-dark" type="submit">View Orders</button>
+                  </form>
                 </ul>
               </div>
             </div>
@@ -36,23 +36,24 @@
                       and we'll figure out a way to get them ready for you!</p>
                 </div>
             </div>
-            <form class="p-5 col-sm-6" style="margin-top: 2rem;">
+            <form action="/order" method="GET" class="p-5 col-sm-6" style="margin-top: 2rem;">
                 <div class="mb-3">
                     <label for="firstAndLastName" class="form-label">First & last name</label>
-                    <input type="text" class="form-control" id="firstAndLastName">
+                    <input type="text" class="form-control" id="firstAndLastName" name="name">
                 </div>
                 <div class="mb-3">
                   <label for="exampleInputEmail1" class="form-label">Email address</label>
-                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name="email">
                   <div id="emailHelp" class="form-text text-white">We'll never share your email with anyone else.</div>
                 </div>
                 <div class="mb-3">
                   <label for="Books" class="form-label">Books</label>
-                  <input type="text" class="form-control" id="Books">
+                  <input type="text" class="form-control" id="Books" name="books">
                 </div>
                 <label for="genre" class="form-label">Choose your genre</label>
                 <div class="input-group mb-3">
-                    <input type="text" class="form-control" placeholder="Enter genre" aria-label="Enter genre" aria-describedby="basic-addon2">
+                    <input type="text" class="form-control" placeholder="Enter genre" aria-label="Enter genre" 
+                    aria-describedby="basic-addon2" name="genre">
                     <span class="input-group-text" id="basic-addon2">genre</span>
                 </div>
                 <button type="submit" class="btn btn-dark">Submit</button>
